font  changes and line spacing changes, error fix on ranking table

--- a/www/custom.css
+++ b/www/custom.css
@@ -1,3 +1,10 @@
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 300;
+    line-height: 1.5;
+    color: inherit;
+}
 .navbar-logo img {
     position: absolute;
     right: 6px;
@@ -45,6 +52,8 @@
     white-space: nowrap;
     padding: 0;
 }
+    
+    
 
 .shiny-input-container label {
     font-size: 14px;
